--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,17 +17,17 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps: 
-    - run: echo $GITHUB_WORKSPACE
+    - run: git log --oneline
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
     # Runs a single command using the runners shell
     - name: Run a one-line script
-      run: echo $GITHUB_WORKSPACE
+      run: git status
 
     # Runs a set of commands using the runners shell
     - name: Run a multi-line script
       run: |
-        echo Add other actions to build,
+        git log --oneline
         echo test, and deploy your project.
         echo $GITHUB_WORKSPACE
