--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: myfirstworkflow
 # events but only for the master branch
 on:
   push:
-    branches: [master]
+    branches: [master/src]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
