--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,9 @@ name: myfirstworkflow
 # events but only for the master branch
 on:
   push:
-    branches: [master/src]
+    branches: [master]
+    paths: 
+      - src
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
