--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: myfirstworkflow
+name: mysecondworkflow
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
@@ -17,7 +17,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - run: ls
+      - run: echo "hi"
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
@@ -29,5 +29,6 @@ jobs:
       - name: Run a multi-line script
         run: |
           ls
+          echo hello world
           echo test, and deploy your project.
           echo $GITHUB_WORKSPACE
