--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps: 
-    - run: ls 
+    - run: ${GITHUB_REF##*/}
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
@@ -29,5 +29,5 @@ jobs:
     - name: Run a multi-line script
       run: |
         ls
-        echo test, and deploy your project.
+        echo ${GITHUB_REF##*/}
         echo $GITHUB_WORKSPACE
