--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,14 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps: 
-    - run: echo ${GITHUB_REF##*/}.split.outputs._0
+    - run: |-
+        echo ${GITHUB_REF##*/}
+        echo ${GITHUB_REF##*}
+        echo ${GITHUB_REF#*/}
+        echo ${${GITHUB_REF#*/}}
+        echo ${${GITHUB_REF*/}}
+        echo ${${GITHUB_REF/}}
+
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
 
