--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -5,9 +5,8 @@ name: mysecondworkflow
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the master branch
 on:
-  release:
-    types: [created]
-
+  push:
+    
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -17,7 +16,8 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      - run: echo "hi"
+      - run: |-
+          echo ${${GITHUB_REF##*/}#*-}
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
