--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -6,18 +6,28 @@ name: mysecondworkflow
 # events but only for the master branch
 on:
   push:
-    
+
+env:
+  GKE_CLUSTER: ${GITHUB_REF##*/}
+
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
+    
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - uses: jungwinter/split@v1
+        id: split
+        with:
+          msg: $GKE_CLUSTER
+          seperator: '-'
+
       - run: |-
-          echo ${${GITHUB_REF##*/}#*-}
+          echo $GKE_CLUSTER
+          echo split.outputs._0
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
