--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -8,7 +8,7 @@ on:
   push:
 
 env:
-  GKE_CLUSTER: ${GITHUB_REF##*/}
+  GKE_CLUSTER: ${{GITHUB_REF##*/}}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
