--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,12 +17,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps: 
     - run: |-
-        echo ${GITHUB_REF##*/}
-        echo ${GITHUB_REF##*}
-        echo ${GITHUB_REF#*/}
-        echo ${${GITHUB_REF#*/}}
-        echo ${${GITHUB_REF*/}}
-        echo ${${GITHUB_REF/}}
+        echo ${${GITHUB_CONTEXT/}}
 
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
