--- a/.github/workflows/on-release.yaml
+++ b/.github/workflows/on-release.yaml
@@ -21,7 +21,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       - name: check
-        run: cat ${{ secrets.YOYO }}
+        run:  echo ${{ secrets.YOYO }} > bulk.json
         
         
       - name: Run Workflow
