--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,8 @@ name: myfirstworkflow
 on:
   release:
     type: [published]
-
+env:
+  GKE_CLUSTTER: ${GITHUB_REF##*-}
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
@@ -18,7 +19,7 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps: 
     - run: |-
-       echo ${GITHUB_REF}
+       echo $GKE_CLUSTER
        echo ${GITHUB_REF}
 
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
