--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
     steps: 
     - run: |-
        echo $GKE_CLUSTER
-       echo ${GITHUB_REF}
+       echo ${GITHUB_REF##*-}
 
     # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
     - uses: actions/checkout@v2
